--- a/.github/workflows/bitrise-pr-comment.yml
+++ b/.github/workflows/bitrise-pr-comment.yml
@@ -18,8 +18,8 @@ jobs:
           github-token: ${{secrets.GITHUB_TOKEN}}
           script: |
             const result = await github.request("${{ github.event.issue.pull_request.url }}")
-            console.log(result.data.read.ref)
-            console.log(result.data.read.sha)
+            console.log(result.data.head.ref)
+            console.log(result.data.head.sha)
 
 #       - name: Get PR informations
 #         id: pr_data
