--- a/.github/workflows/bitrise-pr-comment.yml
+++ b/.github/workflows/bitrise-pr-comment.yml
@@ -20,12 +20,13 @@ jobs:
           script: |
             const result = await github.request("${{ github.event.issue.pull_request.url }}")
             return result.data.head
+            result-encoding: json
 
       - name: Get PR informations
         id: pr_data
         run: |
           echo ">>>>> test"
-          echo ">>>> ${steps.pr_head.outputs}"
+          echo ">>>> ${{ fromJson(steps.pr_head.outputs.result) }}"
           
           # echo "::set-output name=branch::${{ fromJson(steps.curl_data.outputs.pr).ref }}"
           # echo "::set-output name=sha::${{ fromJson(steps.curl_data.outputs.pr).sha }}"
