--- a/.github/workflows/bitrise-pr-comment.yml
+++ b/.github/workflows/bitrise-pr-comment.yml
@@ -17,9 +17,11 @@ jobs:
         id: pr_head
         with:
           github-token: ${{secrets.GITHUB_TOKEN}}
-          script: |
-            const result = await github.request("${{ github.event.issue.pull_request.url }}")
-            return result.data.head
+          result-encoding: string
+          script: | 
+            return "I will be string (not JSON) encoded!"
+#           const result = await github.request("${{ github.event.issue.pull_request.url }}")
+#           return result.data.head
 
       - name: Get PR informations
         id: pr_data
