--- a/.github/workflows/bitrise-pr-comment.yml
+++ b/.github/workflows/bitrise-pr-comment.yml
@@ -10,10 +10,13 @@ jobs:
       - uses: actions/github-script@v5
         id: set-result
         with:
-          script: return "Hello!"
+          script: |
+            return "Hello!"
           result-encoding: string
+      
       - name: Get result
-        run: echo "${{steps.set-result.outputs.result}}"
+        run: |
+          echo "${{steps.set-result.outputs.result}}"
 #       - name: Curl Github API Request
 #         id: curl_data
 #         run: |
