--- a/.github/workflows/bitrise-pr-comment.yml
+++ b/.github/workflows/bitrise-pr-comment.yml
@@ -13,7 +13,7 @@ jobs:
           script: |
             const result = await github.request("${{ github.event.issue.pull_request.url }}")
             return result.data.head
-          result-encoding: string
+          result-encoding: json
       
       - name: Get result
         run: |
