--- a/.github/workflows/bitrise-pr-comment.yml
+++ b/.github/workflows/bitrise-pr-comment.yml
@@ -34,19 +34,13 @@ jobs:
             WORKFLOW="unit-test"
           fi
           
-          # for tests
-          BRANCH="${{ steps.pr-result.outputs.branch }}"
-          HASH="${{ steps.pr-result.outputs.sha }}"
-          echo "${BRANCH} ${HASH}"
-            
-#           # skip curl if workflow didn't match
-#           if [ "$WORKFLOW" != "" ]; then
-#             BRANCH="${{ steps.pr_data.outputs.branch }}"
-#             HASH="${{ steps.pr_data.outputs.sha }}"
-#             APP_SLUG=${{ secrets.BITRISE_APP_SLUG }}
-#             BUILD_TRIGGER_TOKEN=${{ secrets.BITRISE_BUILD_TRIGGER_TOKEN }}
-#             echo "${BRANCH} ${HASH}"
-#             # curl https://app.bitrise.io/app/$APP_SLUG/build/start.json --data '{"hook_info":{"type":"bitrise","build_trigger_token":"'${BUILD_TRIGGER_TOKEN}'"}, "build_params":{"branch":"'${BRANCH}'","workflow_id":"'${WORKFLOW}'","commit_hash":"'${HASH}'"},"triggered_by":"curl"}'
-#           else
-#             echo "Workflow not found"
-#           fi
+          if [ "$WORKFLOW" != "" ]; then
+            BRANCH="${{ steps.pr-result.outputs.branch }}"
+            HASH="${{ steps.pr-result.outputs.sha }}"
+            APP_SLUG=${{ secrets.BITRISE_APP_SLUG }}
+            BUILD_TRIGGER_TOKEN=${{ secrets.BITRISE_BUILD_TRIGGER_TOKEN }}
+            echo "${BRANCH} ${HASH}"
+            curl https://app.bitrise.io/app/$APP_SLUG/build/start.json --data '{"hook_info":{"type":"bitrise","build_trigger_token":"'${BUILD_TRIGGER_TOKEN}'"}, "build_params":{"branch":"'${BRANCH}'","workflow_id":"'${WORKFLOW}'","commit_hash":"'${HASH}'"},"triggered_by":"curl"}'
+          else
+            echo "Workflow not found"
+          fi
