--- a/.github/workflows/welcome.yml
+++ b/.github/workflows/welcome.yml
@@ -16,9 +16,9 @@ jobs:
         with:
           github-token: ${{secrets.GITHUB_TOKEN}}
           script: |
-            const commentBody = '👋 Hello @${{ github.actor }}, you can re-run Bitrise workflow using the following commands
-              `run tests` to run `pr-jobs`
-              `make app` to run `build-app`
+            const commentBody = '👋 Hello @${{ github.actor }}, you can re-run Bitrise workflow using the following commands \
+              `run tests` to run `pr-jobs` \
+              `make app` to run `build-app` \
               `unit test` to run `unit-test`'
               
             github.issues.createComment({
