--- a/.github/workflows/bitrise-pr-comment.yml
+++ b/.github/workflows/bitrise-pr-comment.yml
@@ -7,23 +7,29 @@ jobs:
     if: ${{ github.event_name == 'issue_comment' && (startsWith(github.event.comment.body, 'make') || startsWith(github.event.comment.body, 'run')) }}
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/github-script@v5
-        id: github-result
-        with:
-          script: |
-            const result = await github.request("${{ github.event.issue.pull_request.url }}")
-            return result.data.head
-          result-encoding: json
+#       - uses: actions/github-script@v5
+#         id: github-result
+#         with:
+#           script: |
+#             const result = await github.request("${{ github.event.issue.pull_request.url }}")
+#             return result.data.head
+#           result-encoding: json
       
-      - name: Get result
-        id: pr-result
-        run: |
-          echo "::set-output name=branch::${{fromJson(steps.github-result.outputs.result).ref}}"
-          echo "::set-output name=sha::${{fromJson(steps.github-result.outputs.result).sha}}"
+#       - name: Get result
+#         id: pr-result
+#         run: |
+#           echo "::set-output name=branch::${{fromJson(steps.github-result.outputs.result).ref}}"
+#           echo "::set-output name=sha::${{fromJson(steps.github-result.outputs.result).sha}}"
 
       - name: PR comment
         run: |
           COMMENT_ORIG="${{ github.event.comment.body }}"
+          
+          BRANCH="${{ github.event.pull_request.head.ref }}"
+          HASH="${{ github.event.pull_request.head.sha }}"
+          
+          echo $BRANCH
+          echo $HASH
           
           COMMENT=${COMMENT_ORIG,,}
           
